--- a/site_libs/about.html
+++ b/site_libs/about.html
@@ -362,7 +362,8 @@ be found on my Github page.</p>
 </div>
 <div id="resume" class="section level3">
 <h3>Resume</h3>
-<embed src="files/Edmund_Wong_2025_Resume.pdf" width="100%" height="800px" type="application/pdf">
+<p><a href="files/Edmund_Wong_2025_Resume.pdf">Download my résumé
+(PDF)</a></p>
 </div>
 
 
