--- a/site_libs/about.html
+++ b/site_libs/about.html
@@ -362,8 +362,10 @@ be found on my Github page.</p>
 </div>
 <div id="resume" class="section level3">
 <h3>Resume</h3>
-<p><a href="/files/Edmund_Wong_2025_Resume.pdf">Download my résumé
-(PDF)</a></p>
+<p><a
+href="https://github.com/EdmundWong101/p8105_ecw2178.github.io/blob/main/files/Edmund_Wong_2025_Resume.pdf">Download
+my résumé (PDF)</a></p>
+<embed src="https://github.com/EdmundWong101/p8105_ecw2178.github.io/blob/main/files/Edmund_Wong_2025_Resume.pdf" width="100%" height="800px" type="application/pdf">
 </div>
 
 
