--- a/site_libs/index.html
+++ b/site_libs/index.html
@@ -338,6 +338,12 @@ div.tocify {
      
   </a>
 </li>
+<li>
+  <a href="https://www.linkedin.com/in/ecw2178/">
+    <span class="fa fa-LinkedIn fa-lg"></span>
+     
+  </a>
+</li>
       </ul>
     </div><!--/.nav-collapse -->
   </div><!--/.container -->
