--- a/site_libs/index.html
+++ b/site_libs/index.html
@@ -340,7 +340,7 @@ div.tocify {
 </li>
 <li>
   <a href="https://www.linkedin.com/in/ecw2178/">
-    <span class="fa fa-LinkedIn fa-lg"></span>
+    <span class="fa fa-linkedin fa-lg"></span>
      
   </a>
 </li>
