reorganized files again

--- a/site_libs/index.html
+++ b/site_libs/index.html
@@ -324,7 +324,7 @@ div.tocify {
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="about.html">About</a>
+  <a href="about.html">About me</a>
 </li>
 <li>
   <a href="mailto:&lt;ecw2178@cumc.columbia.edu&gt;">
@@ -339,7 +339,7 @@ div.tocify {
   </a>
 </li>
 <li>
-  <a href="https://www.linkedin.com/in/ecw2178/">
+  <a href="http://linkedin.com/in/ecw2178">
     <span class="fa fa-linkedin fa-lg"></span>
      
   </a>
@@ -362,8 +362,19 @@ websites</h1>
 <p>Welcome! Things are currently under construction but feel free to
 roam around</p>
 <p><img
-src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fmedia.tenor.com%2Fimages%2F17fb5bd9a52cdc14bfaafe2bf9a0f010%2Ftenor.gif&amp;f=1&amp;nofb=1&amp;ipt=370bd9c5b63614fd4680aa592c978c21c35c9f6c0ae90c543bc0152ba1caf581" />
-## Links to other websites * <a href="https://p8105.com/">P8105</a></p>
+src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fmedia.tenor.com%2Fimages%2F17fb5bd9a52cdc14bfaafe2bf9a0f010%2Ftenor.gif&amp;f=1&amp;nofb=1&amp;ipt=370bd9c5b63614fd4680aa592c978c21c35c9f6c0ae90c543bc0152ba1caf581" /></p>
+<div id="navigate-to-other-website-pages" class="section level2">
+<h2>Navigate to other website pages</h2>
+<ul>
+<li><a href="about.html">About me</a></li>
+</ul>
+</div>
+<div id="links-to-other-websites" class="section level2">
+<h2>Links to other websites</h2>
+<ul>
+<li><a href="https://p8105.com/">P8105</a></li>
+</ul>
+</div>
 
 
 
