--- a/site_libs/Resume.html
+++ b/site_libs/Resume.html
@@ -359,25 +359,12 @@ websites</h1>
 </div>
 
 
-<p>Welcome! Things are currently under construction but feel free to
-roam around</p>
-<p><img
-src="/Users/edmundwong/Downloads/p8105_ecw2178.github.io/files/orb-of-confusion-spongebob-1791698264.gif" /></p>
-<hr />
-<div id="navigate-to-other-pages-on-this-website"
-class="section level3">
-<h3>Navigate to other pages on this website</h3>
-<ul>
-<li><a href="about.html">About me</a></li>
-<li><a href="Resume.html">Resume</a></li>
-<li><a href="plotly_dashboards.html">Plots and Dashboards</a></li>
-</ul>
-</div>
-<div id="links-to-other-websites" class="section level3">
-<h3>Links to other websites</h3>
-<ul>
-<li><a href="https://p8105.com/">P8105</a></li>
-</ul>
+<div id="resume" class="section level3">
+<h3>Resume</h3>
+<p><a
+href="https://github.com/EdmundWong101/p8105_ecw2178.github.io/blob/main/files/Edmund_Wong_2025_Resume.pdf">Download
+my résumé (PDF)</a></p>
+<embed src="https://github.com/EdmundWong101/p8105_ecw2178.github.io/blob/main/files/Edmund_Wong_2025_Resume.pdf" width="100%" height="800px" type="application/pdf">
 </div>
 
 
