--- a/site_libs/plotly_dashboard.html
+++ b/site_libs/plotly_dashboard.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Edmund’s (definitely not) barebones websites</title>
+<title>plotly_dashboard</title>
 
 <script src="site_libs/header-attrs-2.30/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -353,32 +353,38 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Edmund’s (definitely not) barebones
-websites</h1>
+<h1 class="title toc-ignore">plotly_dashboard</h1>
 
 </div>
 
 
-<p>Welcome! Things are currently under construction but feel free to
-roam around</p>
-<p><img
-src="/Users/edmundwong/Downloads/p8105_ecw2178.github.io/files/orb-of-confusion-spongebob-1791698264.gif" /></p>
-<hr />
-<div id="navigate-to-other-pages-on-this-website"
-class="section level3">
-<h3>Navigate to other pages on this website</h3>
-<ul>
-<li><a href="about.html">About me</a></li>
-<li><a href="Resume.html">Resume</a></li>
-<li><a href="plotly_dashboards.html">Plots and Dashboards</a></li>
-</ul>
-</div>
-<div id="links-to-other-websites" class="section level3">
-<h3>Links to other websites</h3>
-<ul>
-<li><a href="https://p8105.com/">P8105</a></li>
-</ul>
-</div>
+<pre class="r"><code>library(p8105.datasets)
+library(tidyverse)</code></pre>
+<pre><code>## ── Attaching core tidyverse packages ──────── tidyverse 2.0.0 ──
+## ✔ dplyr     1.1.4     ✔ readr     2.1.5
+## ✔ forcats   1.0.1     ✔ stringr   1.5.2
+## ✔ ggplot2   4.0.0     ✔ tibble    3.3.0
+## ✔ lubridate 1.9.4     ✔ tidyr     1.3.1
+## ✔ purrr     1.1.0     
+## ── Conflicts ────────────────────────── tidyverse_conflicts() ──
+## ✖ dplyr::filter() masks stats::filter()
+## ✖ dplyr::lag()    masks stats::lag()
+## ℹ Use the conflicted package (&lt;http://conflicted.r-lib.org/&gt;) to force all conflicts to become errors</code></pre>
+<pre class="r"><code>library(plotly)</code></pre>
+<pre><code>## 
+## Attaching package: &#39;plotly&#39;
+## 
+## The following object is masked from &#39;package:ggplot2&#39;:
+## 
+##     last_plot
+## 
+## The following object is masked from &#39;package:stats&#39;:
+## 
+##     filter
+## 
+## The following object is masked from &#39;package:graphics&#39;:
+## 
+##     layout</code></pre>
 
 
 
