--- a/site_libs/about.html
+++ b/site_libs/about.html
@@ -324,7 +324,7 @@ div.tocify {
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="about.html">About</a>
+  <a href="about.html">About me</a>
 </li>
 <li>
   <a href="mailto:&lt;ecw2178@cumc.columbia.edu&gt;">
@@ -339,7 +339,7 @@ div.tocify {
   </a>
 </li>
 <li>
-  <a href="https://www.linkedin.com/in/ecw2178/">
+  <a href="http://linkedin.com/in/ecw2178">
     <span class="fa fa-linkedin fa-lg"></span>
      
   </a>
