--- a/site_libs/index.html
+++ b/site_libs/index.html
@@ -333,7 +333,7 @@ div.tocify {
   </a>
 </li>
 <li>
-  <a href="http://github.com/EdmundWong101/">
+  <a href="https://github.com/EdmundWong101/p8105_ecw2178.github.io">
     <span class="fa fa-github fa-lg"></span>
      
   </a>
@@ -361,8 +361,7 @@ websites</h1>
 
 <p>Welcome! Things are currently under construction but feel free to
 roam around</p>
-<p><img
-src="/Users/edmundwong/Downloads/p8105_ecw2178.github.io/files/orb-of-confusion-spongebob-1791698264.gif" /></p>
+<embed src = "https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.ytimg.com%2Fvi%2FZeuynZj7msg%2Fmaxresdefault.jpg">
 <hr />
 <div id="navigate-to-other-pages-on-this-website"
 class="section level3">
