--- a/site_libs/about.html
+++ b/site_libs/about.html
@@ -333,7 +333,7 @@ div.tocify {
   </a>
 </li>
 <li>
-  <a href="http://github.com/EdmundWong101/">
+  <a href="https://github.com/EdmundWong101/p8105_ecw2178.github.io">
     <span class="fa fa-github fa-lg"></span>
      
   </a>
