--- a/site_libs/about.html
+++ b/site_libs/about.html
@@ -327,6 +327,12 @@ div.tocify {
   <a href="about.html">About me</a>
 </li>
 <li>
+  <a href="plotly_dashboard.html">Plotly</a>
+</li>
+<li>
+  <a href="dashboard_rest_inspec.html">Dashboard</a>
+</li>
+<li>
   <a href="mailto:&lt;ecw2178@cumc.columbia.edu&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
