edited resume page

--- a/site_libs/index.html
+++ b/site_libs/index.html
@@ -375,7 +375,7 @@ class="section level3">
 <ul>
 <li><a href="about.html">About me</a></li>
 <li><a href="Resume.html">Resume</a></li>
-<li><a href="plotly_dashboards.html">Plots and Dashboards</a></li>
+<li><a href="dashboard_rest_inspec.html">Plots and Dashboards</a></li>
 </ul>
 </div>
 <div id="links-to-other-websites" class="section level3">
