descriptions for plots

--- a/site_libs/Resume.html
+++ b/site_libs/Resume.html
@@ -370,7 +370,77 @@ websites</h1>
 <p><a
 href="https://github.com/EdmundWong101/p8105_ecw2178.github.io/blob/main/files/Edmund_Wong_2025_Resume.pdf">Download
 my résumé (PDF)</a></p>
-<embed src="https://github.com/EdmundWong101/p8105_ecw2178.github.io/blob/main/files/Edmund_Wong_2025_Resume.pdf" width="100%" height="800px" type="application/pdf">
+</div>
+<div id="academic-background" class="section level3">
+<h3>Academic Background</h3>
+<p>Columbia Universtiy Mailman School of Public Health August
+2024-present Master of Science, Biostatistics (Theory &amp; Methods
+Track)</p>
+<p>Emory University August 2021-May 2024 Bachelor of Science,
+Quantitative Sciences and Biology (summa cum laude)</p>
+</div>
+<div id="professional-experience" class="section level3">
+<h3>Professional Experience</h3>
+</div>
+<div id="biostatistician-intern-at-kyowa-kirin" class="section level1">
+<h1>Biostatistician Intern at Kyowa Kirin</h1>
+<p>June 2025-August 2025 -Conducted research in X-linked
+hypophosphatemia (XLH) in adult and pediatric patients, cultivating
+skills in clinical trial study design, statistical protocol, and
+therapeutic area knowledge. -Analyzed primary and secondary endpoints in
+Phase II clinical trials to assess efficacy endpoints such as bone
+density and 6-minute walk test in pediatric and adult populations with
+XLH in accordance with statistical analysis plans and working
+instructions. -Collaborated with clinical and data science teams to
+review statistical analysis plans (SAPs), working instructions (WIs),
+and data management protocols in clinical trials to ensure good
+programming practices in accordance with CDISC standards. -Participated
+in global (NA and Japan) protocol and statistical methodology
+discussions to ensure accuracy in clinical data analyses. -Supported the
+evaluation of CRO bid proposals, contributing to decision-making for
+clinical trial partnerships.</p>
+</div>
+<div id="graduate-student-data-engineer-at-icap" class="section level1">
+<h1>Graduate Student Data Engineer at ICAP</h1>
+<p>November 2024-May 2025 -Developed, reviewed, and validated SAS data
+pipelines to generate datasets, tables, and figures for interactive
+websites supporting global HIV testing and surveillance projects,
+including UNAIDS 90-90-90 cascade metrics and Population-based HIV
+Impact Assessments (PHIA) in Africa and the Caribbean. -Spearheaded
+investigative project to determine HIV testing rates and results among
+HIV negative populations in Africa from 2016 to 2023, with the goal of
+developing new testing recommendations for people at low risk for
+contracting HIV.</p>
+</div>
+<div id="graduate-research-assistant" class="section level1">
+<h1>Graduate Research Assistant</h1>
+<p>May 2024-May 2025 -Developed an R and SAS-based visualization tool
+leveraging nonparametric estimation to analyze clinical trial datasets.
+-Conducted repeated measures analysis of DEXA imaging data using
+compound symmetry to evaluate the effect of dietary intervention on
+insulin sensitivity and disposition index in cystic fibrosis patients.
+-Conducted correlation analyses between glucose potentiated arginine
+(GPA) response and insulin sensitivity to assess pancreatic beta-cell
+function.</p>
+</div>
+<div id="gavegnano-drug-discovery-program" class="section level1">
+<h1>Gavegnano Drug Discovery Program</h1>
+<p>January 2022-August 2024 -Conducted research as part of a drug
+repurposing initiative focused on treating inflammatory symptoms in
+COVID-19 and HIV patients, with key findings including identifying
+baricitinib, a novel Jak 1/2 small molecule, as a treatment for
+COVID-19. -Designed sub-study analysis of a Phase 2a clinical trial with
+baricitinib, testing the treatment of HIV neuroretinal disorder in
+patients. -Analyzed Phase II clinical trial data, identifying key
+biomarkers for tracking HIV in patients. Results informed future drug
+repurposing clinical trials on biomarker selection. -Maintained
+compliance with BSL2+ lab protocols and mentored junior researchers in
+clinical data analysis and lab protocols.</p>
+<div id="skills" class="section level3">
+<h3>Skills</h3>
+<p>-R, SAS, Python, SQL, ArcGIS, JupyterLab, AWS, Flow Cytometry, Fusion
+360, GraphPad Prism, MS Excel, GitHub</p>
+</div>
 </div>
 
 
