changed rproj directory

--- a/index.html
+++ b/index.html
@@ -367,7 +367,8 @@ websites</h1>
 
 <p>Welcome! Things are currently under construction but feel free to
 roam around</p>
-<embed src = "https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.ytimg.com%2Fvi%2FZeuynZj7msg%2Fmaxresdefault.jpg">
+<p><img
+src="files/orb-of-confusion-spongebob-1791698264.gif" /></p>
 <hr />
 <div id="navigate-to-other-pages-on-this-website"
 class="section level3">
@@ -375,12 +376,7 @@ class="section level3">
 <ul>
 <li><a href="about.html">About me</a></li>
 <li><a href="Resume.html">Resume</a></li>
-<li><a href="dashboard_rest_inspec.html">Plots and Dashboards</a></li>
-</ul>
-</div>
-<div id="links-to-other-websites" class="section level3">
-<h3>Links to other websites</h3>
-<ul>
+<li><a href="plotly_dashboards.html">Plots and Dashboards</a></li>
 <li><a href="https://p8105.com/">P8105</a></li>
 </ul>
 </div>
