--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@ class="section level3">
 <ul>
 <li><a href="about.html">About me</a></li>
 <li><a href="Resume.html">Resume</a></li>
-<li><a href="plotly_dashboards.html">Plots and Dashboards</a></li>
+<li><a href="dashboard_rest_inspec.html">Plots and Dashboards</a></li>
 <li><a href="https://p8105.com/">P8105</a></li>
 </ul>
 </div>
